add image and some new elements to index.html

--- a/index.html
+++ b/index.html
@@ -5,9 +5,23 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
-<body>
-    <h1>My first heading</h1>
+<body style="background-color: bisque;">
+    <h1 style="background-color: tomato; font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;">My first heading</h1>
 
-    <p>My first paragraph</p>
+    <p style="color:brown">My first paragraph</p>
+
+    <a href="https://www.w3schools.com">This is link</a>
+    <hr>
+    <img src="python.jpg" alt="python" width="200px">
+    <br>
+    <pre>
+        My Bonnie lies over the ocean.
+
+        My Bonnie lies over the sea.
+
+        My Bonnie lies over the ocean.
+
+        Oh, bring back my Bonnie to me.
+    </pre>
 </body>
 </html>
