--- a/index.html
+++ b/index.html
@@ -6,9 +6,11 @@
     <title>Document</title>
 </head>
 <body style="background-color: bisque;">
-    <h1 style="background-color: tomato; font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;">My first heading</h1>
+    <h1 style="background-color: tomato; 
+    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif; font-size: 200%;
+    text-align: center;">My first heading</h1>
 
-    <p style="color:brown">My first paragraph</p>
+    <p style="color:brown; font-size: 400%;">My first paragraph</p>
 
     <a href="https://www.w3schools.com">This is link</a>
     <hr>
@@ -23,5 +25,24 @@
 
         Oh, bring back my Bonnie to me.
     </pre>
+    <b>This is bold text</b><br>
+    <strong>This text is important!</strong><br>
+    <i>This text is italic</i><br>
+    <em>This text is also italic</em><br>
+    <small>This is some smaller text</small><br>
+    <p>Do not forget to buy <mark>milk</mark> today</p><br>
+    <p>My fav color is <del>blue</del> <ins>red</ins></p><br>
+    <p>H<sub>2</sub>O</p><br>
+    <p>3<sup>2</sup> is 9</p>
+    <p>Lorem ipsum dolor sit.</p>
+    <blockquote cite="blablabla">For 60 years, WWF has worked to help people and nature thrive. As the world's leading conservation organization, WWF works in nearly 100 countries. At every level, we collaborate with people around the world to develop and deliver innovative solutions that protect communities, wildlife, and the places in which they live.</blockquote>
+    <p>WWF's goal is to <q>Build a future.</q></p>
+    <p>The <abbr title="World Health Organization">WHO</abbr> was founded in 1948</p>
+    <address>
+        Written by Piti<br>
+        Visit us at: <br>
+        Example.com <br>
+        USA
+    </address>
 </body>
 </html>
